ops/grafana/grafana-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - 'grafana.shixh.com'
    - secretName: 'ssl-sxh'
  rules:
    - host: 'grafana.shixh.com'
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
            path: /
